# oracle69

./: .gitignore  README.md  build_frontend.sh  pyproject.toml
.github/workflows/: publish-package.yml
frontend/: README.md
frontend/app/: layout.tsx  page.tsx
frontend2/: README.md
hibiki_zero/: client_utils.py  run.py  server.py  state.py
hibiri/: __init__.py  inference.py  run.py
inference_server/: README.md  main.py
